service-manual/assets/stylesheets/views/_category-index.scss
.category-index {
  header.page-header {
    margin: 1em 2em 3em 2em;
    padding: 0 0 2em 0;
    border-bottom: 5px solid $main-colour;

    hgroup {
      padding: 0;

      h1 {
        @include bold-80;
        color: $text-colour;
      }

      h2.subtitle{
        margin: 0;
        color: $secondary-text-colour;
        @include core-24;
      }
    }
  }

  .article-container {
    .inner {
      margin-left: 25%;
      padding: 0 2em;

      // 1st para is bigger
      .intro,
      > p:first-of-type {
        @include core-24;
      }

      .intro {
        margin: 0 0 1.5em 0;
      }

      // H2's get distinct style
      h2 {
        font-weight: 700;
        border-bottom: none;
        margin: 1.2em 0 0.4em 0;
      }
    }
  }
}

